# fastapi-boilerplate

./: Dockerfile  README.md  README.rst  jarvis.txt  main.py  pyproject.toml
api/v1/: apirouter.py
api/v1/endpoints/: test.py
core/: config.py
